# wp_mw_role

./: pyproject.toml
.github/workflows/: main.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: .mole  converge.yml  molecule.yml  requirements.yml
tasks/: apache.yml  main.yml  setup-debian.yml  setup-redhat.yml  wordpress.yml
templates/: apache.conf.j2  wp-config.php.j2
tests/: test.yml
vars/: debian.yml  redhat.yml
