[project]
name = "wp_mw_role"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible (>=11.0.0,<11.1.0)",
    "molecule (==25.1.0)",
    "molecule-plugins[vagrant] (==23.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

